--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Python WEB group №1 project</title>
+    <title>NeuroTitans project</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin-top: 450px;
-            background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20200731/pngtree-blue-carbon-background-with-sport-style-and-golden-light-image_371487.jpg');
+            margin: 100px auto; /* змінено відступи */
+            max-width: 800px; /* обмеження ширини контенту */
+            background-image: url('https://developer-blogs.nvidia.com/wp-content/uploads/2023/08/intro-to-gnns-16x9-1.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -44,8 +45,8 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to Python WEB group №1 project!</h1>
-    <p>This is a FastAPI application which allows customers to upload, organize, and transform photos, and have interaction with others thru feedback and ratings photos</p>
-    <p>Check out the <a href="https://photoshare-pythonweb.koyeb.app/docs#/">Swagger documentation</a> for more information</p>
+    <h1>Welcome NeuroTitans project!</h1>
+    <p>Welcome to our project, "CIFAR-10 Image Classifier"! This application utilizes a convolutional neural network to accurately classify uploaded images into one of ten predefined categories from the CIFAR-10 dataset. Simply upload an image, and our advanced AI model will instantly identify and label it accordingly.</p>
+    <p>Check out the <a href="http://localhost:8000/docs">Swagger documentation</a> for more information</p>
 </body>
 </html>
