--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -45,7 +45,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome NeuroTitans project!</h1>
+    <h1>Welcome to NeuroTitans project!</h1>
     <p>Welcome to our project, "CIFAR-10 Image Classifier"! This application utilizes a convolutional neural network to accurately classify uploaded images into one of ten predefined categories from the CIFAR-10 dataset. Simply upload an image, and our advanced AI model will instantly identify and label it accordingly.</p>
     <p>Check out the <a href="http://localhost:8000/docs">Swagger documentation</a> for more information</p>
 </body>
