--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,20 +9,20 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin: 100px auto; /* змінено відступи */
-            max-width: 800px; /* обмеження ширини контенту */
+            margin: 100px auto;
+            max-width: 800px;
             background-image: url('https://developer-blogs.nvidia.com/wp-content/uploads/2023/08/intro-to-gnns-16x9-1.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            color: #FFFFFF; /* колір тексту */
+            color: #FFFFFF;
         }
         h1 {
             font-size: 3.0em;
-            color: transparent; /* колір заголовку прозорий */
-            background-image: linear-gradient(45deg, #FFC700, #FFD700, #FFEA00, #FFF100); /* переливающийся фон тексту */
+            color: transparent;
+            background-image: linear-gradient(45deg, #FFC700, #FFD700, #FFEA00, #FFF100);
             background-size: 400%;
-            animation: rainbow-text 8s linear infinite; /* анімація тексту */
+            animation: rainbow-text 8s linear infinite;
             -webkit-background-clip: text;
             background-clip: text;
         }
@@ -36,11 +36,11 @@
         }
         p {
             font-size: 1.5em;
-            color: #FFFFFF; /* колір тексту */
+            color: #FFFFFF;
         }
         a {
-            color: #009aff; /* колір посилання */
-            text-decoration: underline; /* підкреслений текст */
+            color: #009aff;
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -48,5 +48,12 @@
     <h1>Welcome to NeuroTitans project!</h1>
     <p>Welcome to our project, "CIFAR-10 Image Classifier"! This application utilizes a convolutional neural network to accurately classify uploaded images into one of ten predefined categories from the CIFAR-10 dataset. Simply upload an image, and our advanced AI model will instantly identify and label it accordingly.</p>
     <p>Check out the <a href="http://localhost:8000/docs">Swagger documentation</a> for more information</p>
+
+    <!-- Форма для завантаження зображень -->
+    <form action="/upload/" method="post" enctype="multipart/form-data">
+        <label for="file">Select image to upload:</label><br>
+        <input type="file" name="file" id="file" accept="image/*" required><br>
+        <button type="submit">Upload Image</button>
+    </form>
 </body>
 </html>
