--- a/src/templates/image.html
+++ b/src/templates/image.html
@@ -4,17 +4,96 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Images</title>
+    <title>Image View</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px auto;
+            max-width: 600px;
+            background-color: #f4f4f4;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #007bff;
+            font-size: 2.5em;
+            margin-bottom: 30px;
+        }
+        img {
+            width: 100%;
+            height: auto;
+            border: 1px solid #cccccc;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            padding-top: 100px;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.9);
+        }
+        .modal-content {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 700px;
+            height: auto;
+        }
+        .close-button {
+            position: absolute;
+            top: 15px;
+            right: 35px;
+            color: #f1f1f1;
+            font-size: 40px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        .close-button:hover,
+        .close-button:focus {
+            color: #bbb;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-    <h1>All Images</h1>
-    <div>
-        {% for image in images %}
-            <div>
-                <img src="/get_image/{{ image }}" alt="{{ image }}" width="200"/>
-            </div>
-        {% endfor %}
+    <h1>Image View</h1>
+    <img id="image" src="/get_image/{{ image_name }}" alt="{{ image_name }}" />
+
+    <div class="modal" id="imageModal">
+        <span class="close-button">&times;</span>
+        <img class="modal-content" id="modalImage">
     </div>
-    <a href="/">Go Back</a>
+
+    <script>
+        var modal = document.getElementById("imageModal");
+        var modalImage = document.getElementById("modalImage");
+        var span = document.getElementsByClassName("close-button")[0];
+
+        document.getElementById('image').onclick = function(event) {
+            event.preventDefault();
+            var imageSrc = this.src;
+            modalImage.src = imageSrc;
+            modal.style.display = "block";
+        }
+
+        span.onclick = function() {
+            modal.style.display = "none";
+        }
+
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+    </script>
 </body>
 </html>
