--- a/src/templates/all_images.html
+++ b/src/templates/all_images.html
@@ -5,16 +5,83 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Images</title>
+    <style>
+        /* ... Ваші стилі залишаються тут ... */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            padding-top: 100px;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.9);
+        }
+        .modal-content {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 700px;
+            height: auto;
+        }
+        .close-button {
+            position: absolute;
+            top: 15px;
+            right: 35px;
+            color: #f1f1f1;
+            font-size: 40px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        .close-button:hover,
+        .close-button:focus {
+            color: #bbb;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
     <h1>All Images</h1>
-    <div>
+    <div class="image-container">
         {% for image in images %}
-            <div>
-                <img src="/get_image/{{ image }}" alt="{{ image }}" width="200"/>
-            </div>
+            <a href="#" class="image-link" data-image="{{ image }}">
+                <img src="/get_image/{{ image }}" alt="{{ image }}"/>
+            </a>
         {% endfor %}
     </div>
     <a href="/">Go Back</a>
+
+    <div class="modal" id="imageModal">
+        <span class="close-button">&times;</span>
+        <img class="modal-content" id="modalImage">
+    </div>
+
+    <script>
+        var modal = document.getElementById("imageModal");
+        var modalImage = document.getElementById("modalImage");
+        var span = document.getElementsByClassName("close-button")[0];
+
+        document.querySelectorAll('.image-link').forEach(function(element) {
+            element.onclick = function(event) {
+                event.preventDefault();
+                var imageSrc = this.getAttribute('data-image');
+                modalImage.src = "/get_image/" + imageSrc;
+                modal.style.display = "block";
+            }
+        });
+
+        span.onclick = function() {
+            modal.style.display = "none";
+        }
+
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+    </script>
 </body>
 </html>
