--- a/src/templates/success.html
+++ b/src/templates/success.html
@@ -48,6 +48,12 @@
             color: #555555;
             margin: 5px 0;
         }
+        img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 5px;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -61,6 +67,7 @@
             <li>{{ class }}: {{ (prob * 100) | round(2) }}%</li>
         {% endfor %}
     </ul>
+    <img src="/get_image/{{ filename }}" alt="Uploaded Image">
     <a href="/">Go Back</a>
 </body>
 </html>
